--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -164,11 +164,6 @@ BEGIN
         MENUITEM "View Scraper &Output\tF11",   ID_VIEW_SCRAPEROUTPUT
         MENUITEM "Shoot &Replay Frame\tF12",    ID_VIEW_SHOOTREPLAYFRAME
     END
-    POPUP "&DLL"
-    BEGIN
-        MENUITEM "&Load\tF3",                   ID_DLL_LOAD
-        MENUITEM "Load &Specific File...\tF4",  ID_DLL_LOADSPECIFICFILE
-    END
     MENUITEM "&Problem Solver",             ID_HELP_PROBLEMSOLVER
     POPUP "&Help"
     BEGIN
@@ -239,7 +234,6 @@ END
 IDR_MAINFRAME ACCELERATORS
 BEGIN
     "H",            ID_HELP_HELP,           VIRTKEY, SHIFT, CONTROL, NOINVERT
-    VK_F4,          ID_DLL_LOADSPECIFICFILE, VIRTKEY, NOINVERT
     "C",            ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
     VK_INSERT,      ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
     VK_DELETE,      ID_EDIT_CUT,            VIRTKEY, SHIFT, NOINVERT
@@ -394,9 +388,9 @@ IDD_SAPREFS3 DIALOGEX 0, 0, 219, 155
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_DLLNAME,120,8,80,12,ES_AUTOHSCROLL
-    LTEXT           "Name of DLL to load on startup",IDC_STATIC,4,12,116,8
-    LTEXT           "The DLL-interface had to be improved for version 4.x+. Your DLL has to use the new interface which can be found at ""trunk/Reference User DLL""",IDC_STATIC,4,32,182,32
+    LTEXT           "There are currently no DLL options.",IDC_STATIC,4,12,116,8
+    LTEXT           "the user.dll gets loaded automatically on startup.", IDC_STATIC, 4, 28, 116, 8
+    LTEXT           "A sample DLL can be found at ""trunk/Reference User DLL""",IDC_STATIC,4,44,182,32
 END
 
 IDD_SAPREFS4 DIALOGEX 0, 0, 261, 159
@@ -1371,7 +1365,6 @@ STRINGTABLE
 BEGIN
     ID_MAIN_TOOLBAR_AUTOPLAYER "Engage autoplayer\nAutoplayer"
     ID_MAIN_TOOLBAR_FORMULA "Edit the formula\nFormula"
-    ID_DLL_LOAD             "Load the pre-defined DLL "
 END
 
 STRINGTABLE
@@ -1388,7 +1381,6 @@ STRINGTABLE
 BEGIN
     ID_MAIN_TOOLBAR_SCRAPER_OUTPUT "Scraper output\nScraper output"
     ID_VIEW_SCRAPEROUTPUT   "View images that get captured by the scraper-engine\nScraper output"
-    ID_DLL_LOADSPECIFICFILE "Prompt the user for a DLL to load\nLoad DLL"
 END
 
 STRINGTABLE
