--- a/Reference User DLL/user.vcxproj.filters
+++ b/Reference User DLL/user.vcxproj.filters
@@ -14,9 +14,15 @@
     <ClCompile Include="user.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OpenHoldemFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="user.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OpenHoldemFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
