--- a/DLLs/WindowFunctions_DLL/window_functions.vcxproj.filters
+++ b/DLLs/WindowFunctions_DLL/window_functions.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="window_functions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MessageBoxes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="window_functions.h">
