new GUI-options finished and tested

--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -758,9 +758,12 @@ IDD_SAPREFS15 DIALOGEX 0, 0, 219, 155
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "Start minimized",IDC_GUI_START_MINIMIZED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,8,59,8
-    CONTROL         "Disable all runtime MessageBox popups",IDC_DISABLE_MSGBOX,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,20,157,8
+GROUPBOX        "GUI Visibility", IDC_STATIC, 8, 8, 205, 60
+CONTROL         "First GUI visible ", IDC_RADIO_GUI_FIRST_VISIBLE, "Button", BS_AUTORADIOBUTTON, 12, 20, 177, 9
+CONTROL         "All GUIs minimized", IDC_RADIO_GUI_ALL_MINIMIZED, "Button", BS_AUTORADIOBUTTON, 12, 36, 146, 9
+CONTROL         "No GUI at all", IDC_RADIO_GUI_LESS, "Button", BS_AUTORADIOBUTTON, 12, 52, 146, 9
+CONTROL         "Disable all runtime MessageBox popups",IDC_DISABLE_MSGBOX,
+                "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,74,157,8
 END
 
 IDD_SAPREFS16 DIALOGEX 0, 0, 219, 155
