working at formula-switcher

--- a/OpenHoldem/OpenHoldem.vcxproj
+++ b/OpenHoldem/OpenHoldem.vcxproj
@@ -266,6 +266,7 @@
     <ClCompile Include="CSymbolengineTableStats.cpp" />
     <ClCompile Include="CSymbolengineUserDLL.cpp" />
     <ClCompile Include="CSymbolEngineVersus.cpp" />
+    <ClCompile Include="CSymbolEngineFormulaSwitching.cpp" />
     <ClCompile Include="CTableState.cpp" />
     <ClCompile Include="CTableTitle.cpp" />
     <ClCompile Include="CTitleEvaluator.cpp" />
@@ -551,6 +552,7 @@
     <ClInclude Include="CSymbolengineTableStats.h" />
     <ClInclude Include="CSymbolengineUserDLL.h" />
     <ClInclude Include="CSymbolengineVersus.h" />
+    <ClInclude Include="CSymbolEngineFormulaSwitching.h" />
     <ClInclude Include="CTableState.h" />
     <ClInclude Include="CTableTitle.h" />
     <ClInclude Include="CTitleEvaluator.h" />
