--- a/OpenScrape/OpenScrape.vcxproj.filters
+++ b/OpenScrape/OpenScrape.vcxproj.filters
@@ -8,9 +8,6 @@
     <Filter Include="Source Files\CTransform">
       <UniqueIdentifier>{6b73900a-ba07-415b-be2e-16fcf1ed614d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\hscroll-list-box">
-      <UniqueIdentifier>{918ee24f-dc33-41d9-bab7-9a5ca919258a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\CTablemap">
       <UniqueIdentifier>{9ce50843-6a56-404f-8a86-760bb7a9b788}</UniqueIdentifier>
     </Filter>
@@ -20,9 +17,6 @@
     </Filter>
     <Filter Include="Header Files\CTransform">
       <UniqueIdentifier>{734f1bbf-3dd4-4e37-a652-b4d0db818735}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\hscroll-list-box">
-      <UniqueIdentifier>{1d1fb431-2f5b-4627-ba80-9c50c76119ad}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\CTablemap">
       <UniqueIdentifier>{bbf17971-2484-426b-b51d-e116685f33e4}</UniqueIdentifier>
@@ -123,9 +117,6 @@
     <ClCompile Include="..\CTransform\pdiff\RGBAImage.cpp">
       <Filter>Source Files\CTransform</Filter>
     </ClCompile>
-    <ClCompile Include="..\hscroll-list-box\HScrollListBox.cpp">
-      <Filter>Source Files\hscroll-list-box</Filter>
-    </ClCompile>
     <ClCompile Include="..\CTablemap\CTablemap.cpp">
       <Filter>Source Files\CTablemap</Filter>
     </ClCompile>
@@ -140,6 +131,9 @@
     </ClCompile>
     <ClCompile Include="..\OpenHoldem\CTitleEvaluator.cpp">
       <Filter>Source Files\OpenHoldem_Functions</Filter>
+    </ClCompile>
+    <ClCompile Include="HScrollListBox.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -230,9 +224,6 @@
     <ClInclude Include="..\CTransform\hash\stdint.h">
       <Filter>Header Files\CTransform</Filter>
     </ClInclude>
-    <ClInclude Include="..\hscroll-list-box\HScrollListBox.h">
-      <Filter>Header Files\hscroll-list-box</Filter>
-    </ClInclude>
     <ClInclude Include="..\CTablemap\CTablemap.h">
       <Filter>Header Files\CTablemap</Filter>
     </ClInclude>
@@ -244,6 +235,9 @@
     </ClInclude>
     <ClInclude Include="..\OpenHoldem\CTitleEvaluator.h">
       <Filter>Header Files\OpenHoldem_Functions</Filter>
+    </ClInclude>
+    <ClInclude Include="HScrollListBox.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
