--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ OpenHoldem/Release - Optimized
 Release
 Release - Optimized
 scintilla/bin
-.vs/OpenHoldem/v14/.suo
-.vs/
+\.vs/OpenHoldem/v14/.suo
+\.vs/
 
 
