--- a/ManualMode/ManualMode.rc
+++ b/ManualMode/ManualMode.rc
@@ -69,15 +69,21 @@ IDR_MAINFRAME           ICON                    "res\\ManualMode.ico"
 // Dialog
 //
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 235, 55
+IDD_ABOUTBOX DIALOGEX 0, 0, 266, 157
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About this program"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    ICON            IDR_MAINFRAME,IDC_STATIC,11,17,20,20
-    LTEXT           "Version 11.1.3.0",IDC_STATIC,40,10,119,8,SS_NOPREFIX
-    LTEXT           "Licensed under GPLv3",IDC_STATIC,40,25,119,8
-    DEFPUSHBUTTON   "OK",IDOK,178,7,50,16,WS_GROUP
+    ICON            IDR_MAINFRAME, IDC_STATIC, 11, 17, 21, 20
+    LTEXT           "ManualMode", IDC_STATIC, 32, 10, 208, 8, SS_NOPREFIX
+    LTEXT           "Version 13.0.0", IDC_STATIC, 32, 22, 208, 8, SS_NOPREFIX
+    LTEXT           "Licensed under GPLv3", IDC_STATIC, 32, 34, 208, 8
+    LTEXT           "http://www.maxinmontreal.com/forums/index.php", IDC_STATIC, 32, 54, 208, 8
+    LTEXT           "https://github.com/OpenHoldem/openholdembot/", IDC_STATIC, 32, 66, 208, 8
+    LTEXT           "http://www.gnu.org/licenses/gpl.html", IDC_STATIC, 32, 78, 208, 8
+    LTEXT           "Disclaimer: this is an open-source project.", IDC_STATIC, 32, 98, 208, 8, SS_NOPREFIX
+    LTEXT           "We are not related to any shops, stores and/or scam-artists.", IDC_STATIC, 32, 110, 208, 8, SS_NOPREFIX
+    DEFPUSHBUTTON   "OK", IDOK, 108, 134, 50, 16, WS_GROUP
 END
 
 IDD_MANUALMODE_DIALOG DIALOGEX 0, 0, 393, 236
