--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -280,7 +280,7 @@ BEGIN
     LTEXT           "Licensed under GPLv3",IDC_STATIC,32,34,208,8
     LTEXT           "http://www.maxinmontreal.com/forums/index.php",IDC_STATIC,32,54,208,8
     LTEXT           "https://github.com/OpenHoldem/openholdembot/",IDC_STATIC,32,66,208,8
-    LTEXT           "https://sites.google.com/site/openholdempokerbot/downloads",IDC_STATIC,32,78,208,8
+    LTEXT           "http://www.gnu.org/licenses/gpl.html",IDC_STATIC,32,78,208,8
     LTEXT           "Disclaimer: this is an open-source project.",IDC_STATIC,32,98,208,8,SS_NOPREFIX
     LTEXT           "We are not related to any shops, stores and/or scam-artists.",IDC_STATIC,32,110,208,8,SS_NOPREFIX
     DEFPUSHBUTTON   "OK",IDOK,108,134,50,16,WS_GROUP
